<resources>
    <string name="app_name">MedicineGuru</string>
    <string name="card1">Medicine at Doorsteps</string>
    <string name="card2">Save time</string>
    <string name="card3">Upload prescription</string>
    <string name="card1detail">Get medicines deliverd at your door steps without any hastle</string>
    <string name="card2detail">No need to get around to pharmacies</string>
    <string name="card3detail">Upload prescription and get medicine anywhere you want</string>
    <string name="facebook_application_id" translatable="false">226143411262381</string>
    <string name="facebook_app_id">226143411262381</string>
    <string name="fb_login_protocol_scheme">fb226143411262381</string>
    <string name="title_activity_main">Medicine Guru</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="sign_in_cancelled">Authentication error access denied</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="unknown_error">Unknown error occured</string>
    <string name="portrait_message">This is Portrait mode fragment</string>

    <string name="label_loading">Please Wait…</string>
    <string name="label_interval">Interval: </string>
    <string name="label_indicator_size">Indicator size: </string>
    <string name="label_animate_indicators">Animate indicators: </string>
    <string name="label_hide_indicators">Hide Indicators</string>
    <string name="label_loop_slides">Loop slides: </string>
    <array name="page_indicators">
        <item>Circle</item>
        <item>Dash</item>
        <item>Round Square</item>
        <item>Square</item>
        <item>Custom</item>
    </array>
    <array name="admin_list">
        <item>brinderjitsingh30@gmail.com</item>

    </array>
    <string name="title_activity_insert_medicine">InsertMedicineActivity</string>
    <string name="insert_medicine_title">Medicine Details</string>
    <string name="medicine_price">Price</string>
    <string name="medicine_name">Name</string>
    <string name="medicine_title">Title</string>
    <string name="medicine_description">Description</string>
    <string name="medicine_size">Size</string>
    <string name="action_cart">Size</string>
    <string name="medicine_color">Select Color</string>
    <string name="medicine_form">Select form</string>
    <string name="upload_medicine_img">Upload Image</string>
    <string name="choose_medicine_img">Choose Image</string>
    <string name="insert_medicine">Insert</string>
    <string name="medicine_dosage_quantity">Enter Quantity</string>

    <string-array name="medicine_unit">
        <item>Select unit</item>
        <item>mg</item>
        <item>mcg</item>
        <item>gm</item>
        <item>L</item>
        <item>mL</item>
    </string-array>
    >

    <string-array name="medicine_color">
        <item>Select Color</item>
        <item>Black</item>
        <item>Clear</item>
        <item>Gray</item>
        <item>Green</item>
        <item>Gold</item>
        <item>Blue</item>
        <item>Brown</item>
        <item>Lavendar</item>
        <item>Multi-color</item>
        <item>Off-white</item>
        <item>Orange</item>
        <item>Peach</item>
        <item>Pink</item>
        <item>Purple</item>
        <item>Red</item>
        <item>Tan</item>
        <item>Turquoise</item>
        <item>White</item>
        <item>Yellow</item>
    </string-array>
    <string-array name="require_prescription">
        <item>Require Prescription</item>
        <item>Yes</item>
        <item>No</item>

    </string-array>
    <string-array name="medicine_form">
        <item>Select form</item>
        <item>Liquid</item>
        <item>Gel</item>
        <item>Ointment</item>
        <item>Powder</item>
        <item>Capsules</item>
        <item>Tablets</item>
        <item>Pills</item>
        <item>Palets</item>
        <item>Lozenges and Troches</item>
        <item>Liniment</item>
        <item>Inhalants</item>
        <item>Lotions</item>
        <item>Paste</item>
        <item>Sprays</item>
    </string-array>

    <string name="about_text">
        <item>The vision of this android app is to reach every individual who buy medicines. In current system, after getting prescription from the doctor a patient visits pharmacy and wait in queues to get prescribed medicine. Our app allows the patients after getting the prescriptions can upload their prescription and order medicines. Our app helps to avoid the overhead of going to the stores to buy the medicines. After placing the order of medicine and once the prescription is verified, users will receive a notification that their order will be processed and shipped. Our focus is to provide the best services to the customers and making lives easier by providing service to door.</item>
        <item>
            \n\n
        </item>
        <item>
            Medicine guru is a user-friendly android app that solves the above described problem. Medicine guru is an innovative android app that lets patients order medicine from anywhere. Users can browse medicines without logging in into the system. But to make purchases they need to register and login into the system. Over the counter medicines that does not require any prescription can be ordered without uploading prescription but for medicines that need doctor’s prescription user need to upload doctor’s prescription.
        </item>
    </string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
</resources>
