<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.team2.medicineguru.InsertMedicine">

    <TextView
        style="@style/AppTheme.navText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/insert_medicine_title"
        android:textSize="@dimen/title_font"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/nameTxt"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/medicine_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/titletxt"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/medicine_title"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/descriptionTxt"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:inputType="textPersonName"
        android:hint="@string/medicine_description" />

    <EditText
        android:id="@+id/sizeTxt"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:inputType="number"
        android:hint="@string/medicine_size" />

    <EditText
        android:id="@+id/priceTxt"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:inputType="number"
        android:hint="@string/medicine_price" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Spinner
            android:id="@+id/colorSpinner"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:entries="@string/medicine_color" />

        <Spinner
            android:id="@+id/formSpinner"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:entries="@string/medicine_form" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/dosageAmountTxt"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:inputType="number"
            android:hint="@string/medicine_dosage_quantity" />

        <Spinner
            android:id="@+id/unitSpinner"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:entries="@array/medicine_unit" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <AutoCompleteTextView
              android:id="@+id/atSymptoms"
              android:layout_width="200dp"
              android:layout_height="wrap_content"
              android:hint="Symptom" />

        <Button
              android:id="@+id/btnAdd"
              android:layout_width="100dp"
              android:layout_height="wrap_content"
              android:text="ADD"
              android:onClick="add_symptoms"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/med_img"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:srcCompat="@drawable/com_facebook_tooltip_blue_xout" />

        <Button
            android:id="@+id/btnChooseImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_medicine_img"
            android:onClick="chooseImage"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnInsertMedicine"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="insertMedicineInDatabase"
        android:text="@string/insert_medicine" />

</LinearLayout>
